--- a/web.html
+++ b/web.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset ="UTF-8">
+  <link rel="stylesheet" href="style.css">
+</head>
     <style>
         .button {
     border: none;
   color: rgb(255, 255, 255);
-  padding: 10px 20px;
+  padding: 10px 22px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -13,13 +18,13 @@
   cursor: pointer}
     .button {background-color: #4c90af;} 
     </style>
-    <body>     
+    <body> 
     <button class="button button">Profile</button>
     <button class="button button">Registration</button>
     <a href="faculty info.html">
-    <button class="button button">Faculty Info</button></body></a>
-    <button class="button button">Books</button>
-    <button class="button button">Notes</button>
+    <button class="button button">Faculty Info</button></a>
+    <a href="http://paperfactorymnnit.pythonanywhere.com/">   
+    <button class="button button">Books & Notes</button></body></a>
     <button class="button button">Attendence</button>
     <button class="button button">Exam Schedule</button>
     <button class="button button">Fee Dues</button>
@@ -27,7 +32,7 @@
     <button class="button button">Webmail</button>
     <button class="button button">Logout</button>
     <a href="#">
-    <img src="C:\Users\mypc\Desktop\IMG-20201225-WA0031.jpg" width="1350" height="580" ismap="ismap">
+    <img src="C:\Users\mypc\Desktop\mnnitimage.jpg" width="1350" height="580" ismap="ismap">
     <map name="imap" id="#imap">
     <area shape="rect" coords="0,0,1350,580" href="http://www.mnnit.ac.in/"  target="_blank"></a>
     </map>
