--- a/Main Page.html
+++ b/Main Page.html
@@ -69,12 +69,20 @@ body {
   overflow:hidden;
   background-color:#333;
 }
-
+.topnavselected a {
+  float:left;
+  display: initial;
+  color: rgb(221, 221, 221);
+  text-align: center;
+  padding: 20px 70px;
+  text-decoration: none;
+}
 /* Style the topnav links */
 .topnavleft a {
   float:left;
   display: initial;
   color: #c3bb47;
+  
   text-align: center;
   padding: 20px 70px;
   text-decoration: none;
@@ -104,17 +112,30 @@ body {
 </div>
 
 <div class="topnavleft">
+<div class="topnavselected">
   <a href="#">Home</a>
-  <a href="http://www.mnnit.ac.in/" target = "blank">Institute Website</a>
-  <a href="http://www.mnnit.ac.in/index.php/institute/photo-gallery">Gallery</a>
-  <a href="Dashboard.html">Dashboard</a>
+</div>
+
+
+
+ <a href="http://www.mnnit.ac.in/" target = "blank">Institute Website</a>
+ <a href="Notifications.html">Notifications</a>  
   
+  <!-- <a href="Notifications.html">Notifications</a> -->
+
+  <!-- <div class="topnavselected">
+  <a href="Notifications.html">Notifications</a>  
+</div> -->
+
   <div class = "topnavright">
     <a href="#"><strong>Login</strong></a>
     <a href="#"><strong>About</strong></a>
-  </div>
+  
 
 </div>
+
+</div>
+
 <!-- <div class="sidenav">
   <a href="#Class Attendance">Class Attendance</a>
   <a href="#Time Table">Time Table</a>
