--- a/motion.html
+++ b/motion.html
@@ -83,36 +83,36 @@ img {vertical-align: middle;}
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 6</div>
-  <img src="mp hall image.jpg" style="width:100%">
+  <img src="mp hall image.jpg" style="width:1000px; height: 500px;">
   <div class="text">MP Hall</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 6</div>
-  <img src="tedx-mnnit.jpg" style="width:100%">
+  <img src="tedx-mnnit.jpg" style="width:1000px; height: 500px;">
   <div class="text">TEDx MNNIT</div>
 </div>
 
 <div class="mySlides fade">
     <div class="numbertext">3 / 6</div>
-    <img src="mnnit-convocation.jpeg" style="width:100%">
+    <img src="mnnit-convocation.jpeg" style="width:1000px; height: 500px;">
     <div class="text">Convocation</div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">4 / 6</div>
-    <img src="mnnit lib.jpg" style="width:100%">
+    <img src="mnnit lib.jpg" style="width:1000px; height: 500px;">
     <div class="text">Library</div>
  
 </div>
   <div class="mySlides fade">
   <div class="numbertext">5 / 6</div>
-  <img src="avishkar img.jpg" style="width:100%">
+  <img src="avishkar img.jpg" style="width:1000px; height: 500px;">
   <div class="text">Avishkar</div>
 </div>
  <div class="mySlides fade">
   <div class="numbertext">6 / 6</div>
-  <img src="culrav img.jpg" style="width:100%">
+  <img src="culrav img.jpg" style="width:1000px; height: 500px;">
   <div class="text">Culrav</div>
 </div>
 
