--- a/Main Page.html
+++ b/Main Page.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
- {
+*{
   box-sizing: border-box;
 }
 
@@ -69,20 +69,12 @@ body {
   overflow:hidden;
   background-color:#333;
 }
-.topnavselected a {
-  float:left;
-  display: initial;
-  color: rgb(221, 221, 221);
-  text-align: center;
-  padding: 20px 70px;
-  text-decoration: none;
-}
+
 /* Style the topnav links */
 .topnavleft a {
   float:left;
   display: initial;
   color: #c3bb47;
-  
   text-align: center;
   padding: 20px 70px;
   text-decoration: none;
@@ -90,7 +82,7 @@ body {
 .topnavright a {
   float:right;
   display: initial;
-  color: #c34747;
+  color: #c3bb47;
   text-align: center;
   padding: 20px 70px;
   text-decoration: none;
@@ -102,6 +94,75 @@ body {
   background-color: #ddd;
   color: rgb(11, 77, 243);
 }
+body {font-family: Verdana, sans-serif;}
+.mySlides {display: none;}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/6 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .text {font-size: 11px}
+}
+
 </style>
 </head>
 <body>
@@ -112,30 +173,90 @@ body {
 </div>
 
 <div class="topnavleft">
-<div class="topnavselected">
   <a href="#">Home</a>
-</div>
-
-
-
- <a href="http://www.mnnit.ac.in/" target = "blank">Institute Website</a>
- <a href="Notifications.html">Notifications</a>  
+  <a href="http://www.mnnit.ac.in/" target = "blank">Institute Website</a>
+  <a href="http://www.mnnit.ac.in/index.php/institute/photo-gallery">Gallery</a>
+  <a href="Dashboard.html">Dashboard</a>
   
-  <!-- <a href="Notifications.html">Notifications</a> -->
-
-  <!-- <div class="topnavselected">
-  <a href="Notifications.html">Notifications</a>  
-</div> -->
-
-  <div class = "topnavright">
-    <a href="#"><strong>Login</strong></a>
+  <div class = "topnavright">  
+    <a href="login.html"><strong>Login</strong></a>
     <a href="#"><strong>About</strong></a>
+  </div>
+
+</div>
+<h3 style="text-align: center; color: crimson;">Glimpses of MNNIT</h3>
+
+
+<div class="slideshow-container">
+
+<div class="mySlides fade">
+  <div class="numbertext">1 / 6</div>
+  <img src="mp hall image.jpg" style="width:1000px; height: 500px;">
+  <div class="text">MP Hall</div>
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">2 / 6</div>
+  <img src="tedx-mnnit.jpg" style="width:1000px; height: 500px;">
+  <div class="text">TEDx MNNIT</div>
+</div>
+
+<div class="mySlides fade">
+    <div class="numbertext">3 / 6</div>
+    <img src="mnnit-convocation.jpeg" style="width:1000px; height: 500px;">
+    <div class="text">Convocation</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">4 / 6</div>
+    <img src="mnnit lib.jpg" style="width:1000px; height: 500px;">
+    <div class="text">Library</div>
+ 
+</div>
+  <div class="mySlides fade">
+  <div class="numbertext">5 / 6</div>
+  <img src="avishkar img.jpg" style="width:1000px; height: 500px;">
+  <div class="text">Avishkar</div>
+</div>
+ <div class="mySlides fade">
+  <div class="numbertext">6 / 6</div>
+  <img src="culrav img.jpg" style="width:1000px; height: 500px;">
+  <div class="text">Culrav</div>
+</div>
+
+</div>
+<br>
+
+<div style="text-align:center">
+  <span class="dot"></span> 
+  <span class="dot"></span> 
+  <span class="dot"></span> 
+  <span class="dot"></span> 
+  <span class="dot"></span> 
+  <span class="dot"></span> 
+
+</div>
+<script>
+  var slideIndex = 0;
+  showSlides();
   
-
-</div>
-
-</div>
-
+  function showSlides() {
+    var i;
+    var slides = document.getElementsByClassName("mySlides");
+    var dots = document.getElementsByClassName("dot");
+    for (i = 0; i < slides.length; i++) {
+      slides[i].style.display = "none";  
+    }
+    slideIndex++;
+    if (slideIndex > slides.length) {slideIndex = 1}    
+    for (i = 0; i < dots.length; i++) {
+      dots[i].className = dots[i].className.replace(" active", "");
+    }
+    slides[slideIndex-1].style.display = "block";  
+    dots[slideIndex-1].className += " active";
+    setTimeout(showSlides, 2000); // Change image every 2 seconds
+  }
+  </script>
 <!-- <div class="sidenav">
   <a href="#Class Attendance">Class Attendance</a>
   <a href="#Time Table">Time Table</a>
@@ -144,5 +265,58 @@ body {
   <a href="#Fee Status">Fee Status</a>
 </div> -->
 
+</body>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Untitled</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <div class="footer-dark">
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 item text">
+                        <h3>Institute logo</h3>
+                        <img src="mnnit-logo.png" alt="footer logo" style="width:100px;height:100px;">
+                        <p>MNNIT Allahabad, Uttar Pradesh, India is one of the top NITs in the country, also classified as an Institute of National Importance and is commited to excellence in academic pusuits. The institute holds the distinction of being first in the country to start an undergraduate program in CSE.</p>
+                    </div>
+                    <div class="col-sm-6 col-md-3 item">
+                        <h3>Events</h3>
+                        <ul>
+                            <li><a href="https://www.hackathon.com/event/hack-36-40731005534"> Hack36</a></li>
+                            <li><a href="https://culrav.mnnit.ac.in/">Culrav</a></li>
+                            <li><a href="https://ecellmnnit.com/renaissance/">Renaissance</a></li>
+                            <li><a href="https://www.facebook.com/mnnit.avishkar/">Avishkar</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-6 col-md-3 item">
+                        <h3>Our Facilities</h3>
+                        <ul>
+                            <li><a href="http://mnnit.ac.in/index.php/lib-home">Library</a></li>
+                            <li><a href="http://mnnit.ac.in/computercentre/index.php/help-desk">IT support</a></li>
+                            <li><a href="http://mnnit.ac.in/cir/contact_us.php">Research</a></li>
+                            <li><a href="http://sac.mnnit.ac.in/games">Sports</a></li>
+                            <li><a href="http://www.mnnit.ac.in/index.php/conferences-seminars-institute">Conferences</a></li>
+
+                        </ul>
+                    </div>
+                    <div class="col item social">
+                        <a href="https://www.facebook.com/MNNITALLD/"><i class="icon ion-social-facebook"></i></a>
+                        <a href="https://twitter.com/mnnitalld/status/1353936559829991430?lang=en"><i class="icon ion-social-twitter"></i></a>
+                        <a href="https://in.linkedin.com/school/motilal-nehru-national-institute-of-technology/"><i class="icon ion-social-linkedin"></i></a>
+                        <a href="https://www.instagram.com/mnnitalld/?hl=en"><i class="icon ion-social-instagram"></i></a></div>
+                </div>
+                <p class="copyright">Copyright © MNNIT Allahabad 2021. All rights reserved.</p>
+            </div>
+        </footer>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+    <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
 </body>
 </html>
