--- a/Main Page.html
+++ b/Main Page.html
@@ -54,8 +54,7 @@ body {
 /* Style the header */
 .header {
     /* border-radius: 15 px 15 px 15 px 15 px */
-  background-color: orange;
-  padding: 20px;
+  background-color: cadetblue;
   text-align: center;
 }
 
@@ -168,8 +167,8 @@ img {vertical-align: middle;}
 <body>
 
 <div class="header">
-  <img src = "symbol.png"height ="100" width ="100" alt = "NIT Allahabad">
-  <h1 style="height: auto;width: auto;color: rgb(209, 59, 0);">Student Portal</h1>
+  <img src = "mnnit.build.jpg" height ="300px" width ="1350px" alt = "MNNIT Allahabad">
+  <h1 style="height: auto;width: auto;color: darkgreen;">Student Portal</h1>
 </div>
 
 <div class="topnavleft">
