--- a/Main Page.html
+++ b/Main Page.html
@@ -182,9 +182,8 @@ img {vertical-align: middle;}
     <a href="#"><strong>About</strong></a>
   </div>
 
-</div>
-<h3 style="text-align: center; color: crimson;">Glimpses of MNNIT</h3>
-
+</div class="h2">
+  <h2 style="color:crimson;"><marquee behavior="scroll" direction="right" scrollamount="12">Glimpses of MNNIT</marquee><h2>
 
 <div class="slideshow-container">
 
