--- a/web.html
+++ b/web.html
@@ -9,7 +9,7 @@
         .button {
     border: none;
   color: rgb(255, 255, 255);
-  padding: 10px 22px;
+  padding: 10px 23px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -27,14 +27,13 @@
     <button class="button button">Books & Notes</button></body></a>
     <button class="button button">Attendence</button>
     <button class="button button">Exam Schedule</button>
-    <button class="button button">Fee Dues</button>
     <button class="button button">Certificates</button>
+    <a href="club.html">
+    <button class="button button">Clubs</button></a>
     <button class="button button">Webmail</button>
-    <button class="button button">Logout</button>
-    <a href="#">
-    <img src="C:\Users\mypc\Desktop\mnnitimage.jpg" width="1350" height="580" ismap="ismap">
-    <map name="imap" id="#imap">
-    <area shape="rect" coords="0,0,1350,580" href="http://www.mnnit.ac.in/"  target="_blank"></a>
-    </map>
+    <a href="mainpage.html">  
+    <button class="button button">Logout</button></a>
+    <a href="mnnitinfo.html">
+    <img src="C:\Users\mypc\Desktop\mnnitimage.jpg" width="1350px" height="580px"></a>
    </body>
    </html>
