--- a/Main Page.html
+++ b/Main Page.html
@@ -167,8 +167,8 @@ img {vertical-align: middle;}
 <body>
 
 <div class="header">
-  <img src = "mnnit.build.jpg" height ="300px" width ="1350px" alt = "MNNIT Allahabad">
-  <h1 style="height: auto;width: auto;color: darkgreen;">Student Portal</h1>
+  <img src = "mnnit.build.jpg"  width ="100%" alt = "MNNIT Allahabad">
+  <h1 style="height: auto;width: auto;color: darkgreen;">Student Portal</h1>  
 </div>
 
 <div class="topnavleft">
@@ -189,36 +189,36 @@ img {vertical-align: middle;}
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 6</div>
-  <img src="mp hall image.jpg" style="width:1000px; height: 500px;">
+  <img src="mp hall image.jpg" style="width:100%;">
   <div class="text">MP Hall</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 6</div>
-  <img src="tedx-mnnit.jpg" style="width:1000px; height: 500px;">
+  <img src="tedx-mnnit.jpg" style="width:100%;">
   <div class="text">TEDx MNNIT</div>
 </div>
 
 <div class="mySlides fade">
     <div class="numbertext">3 / 6</div>
-    <img src="mnnit-convocation.jpeg" style="width:1000px; height: 500px;">
+    <img src="mnnit-convocation.jpeg" style="width:100%;">
     <div class="text">Convocation</div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">4 / 6</div>
-    <img src="mnnit lib.jpg" style="width:1000px; height: 500px;">
+    <img src="mnnit lib.jpg" style="width:100%;">
     <div class="text">Library</div>
  
 </div>
   <div class="mySlides fade">
   <div class="numbertext">5 / 6</div>
-  <img src="avishkar img.jpg" style="width:1000px; height: 500px;">
+  <img src="avishkar img.jpg" style="width:100%;">
   <div class="text">Avishkar</div>
 </div>
  <div class="mySlides fade">
   <div class="numbertext">6 / 6</div>
-  <img src="culrav img.jpg" style="width:1000px; height: 500px;">
+  <img src="culrav img.jpg" style="width:100%;">
   <div class="text">Culrav</div>
 </div>
 
