--- a/Main Page.html
+++ b/Main Page.html
@@ -183,7 +183,7 @@ img {vertical-align: middle;}
   </div>
 
 </div class="h2">
-  <h2 style="color:crimson;"><marquee behavior="scroll" direction="right" scrollamount="12">Glimpses of MNNIT</marquee></h2>
+  <marquee behavior="scroll" direction="up" scrollamount="12"><h2 style="color:crimson;">Glimpses of MNNIT</h2></marquee>
 
 <div class="slideshow-container">
 
