--- a/faculty info.html
+++ b/faculty info.html
@@ -120,6 +120,25 @@ td {
    <td>Molecular Simulations,Adsorption and self-assembly of nanoparticles</td>
    <td>+91 53224455101</td>
    <td>parulk@mnnit.ac.in</td>
+      <td>Dr. R. D. Gupta</td>
+    <td>Ph.D., M.E., B.E.</td>
+    <td>Geoinformatics (Core and Applications), Spatial Data Infrastructure, Climate Change, Glaciology, Urban Planning, Open Source Software.</td>
+    <td>+91 9838346268 (M)</td>
+    <td>rdg@mnnit.ac.in</td>
+  </tr>
+  <tr>
+    <td>Dr. R. P Tiwari</td>
+    <td>M.E.,Ph.D.</td>
+    <td>Soil Mechanics,Foundation Engineering,Rock Mechanics,GIS and Remote Sensing Application</td>
+    <td>+91 05322271309 </td>
+    <td>rpt@mnnit.ac.in</td>
+  </tr>
+  <tr>
+    <td>Dr. Parul Katiyar</td>
+    <td>Ph.D., M.E., B.Tech.</td>
+    <td>Reinforced Concrete Structure, Concrete Technology, Composite Materials, Waste Materials Utilisation</td>
+    <td>9454257624</td>
+    <td>rkpat@mnnit.ac.in</td>
 </table>
 </body>
 </html>
