--- a/web.html
+++ b/web.html
@@ -74,7 +74,7 @@
       <a href="mailto:examcell@mnnit.ac.in"> Examination/Result</a>
       </div>
       </div>
-    <a href="mainpage.html">  
+    <a href="Main Page.html">  
     <button class="button button">Logout</button></a>
     <a href="mnnitinfo.html">
     <img src="mnnitimage.jpg" width="1350px" height="580px"></a>
