--- a/Main Page.html
+++ b/Main Page.html
@@ -167,7 +167,7 @@ img {vertical-align: middle;}
 <body>
 
 <div class="header">
-  <img src = "mnnit.build.jpg"  width ="100%" alt = "MNNIT Allahabad">
+  <img src = "mnnit.build.jpg" height="300px" width ="100%" alt = "MNNIT Allahabad">
   <h1 style="height: auto;width: auto;color: darkgreen;">Student Portal</h1>  
 </div>
 
