--- a/Main Page.html
+++ b/Main Page.html
@@ -189,13 +189,13 @@ img {vertical-align: middle;}
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 6</div>
-  <img src="mp hall image.jpg" style="width:100%;">
+  <img src="mp hall image.jpg" style="height:500px; width:100%;">
   <div class="text">MP Hall</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 6</div>
-  <img src="tedx-mnnit.jpg" style="width:100%;">
+  <img src="tedx-mnnit.jpg" style="height:500px; width:100%;">
   <div class="text">TEDx MNNIT</div>
 </div>
 
