--- a/Main Page.html
+++ b/Main Page.html
@@ -201,13 +201,13 @@ img {vertical-align: middle;}
 
 <div class="mySlides fade">
     <div class="numbertext">3 / 6</div>
-    <img src="mnnit-convocation.jpeg" style="width:100%;">
+    <img src="mnnit-convocation.jpeg" style="height:500px; width:100%;">
     <div class="text">Convocation</div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">4 / 6</div>
-    <img src="mnnit lib.jpg" style="width:100%;">
+    <img src="mnnit lib.jpg" style="height: 500px; width:100%;">
     <div class="text">Library</div>
  
 </div>
