--- a/Main Page.html
+++ b/Main Page.html
@@ -213,12 +213,12 @@ img {vertical-align: middle;}
 </div>
   <div class="mySlides fade">
   <div class="numbertext">5 / 6</div>
-  <img src="avishkar img.jpg" style="width:100%;">
+  <img src="avishkar img.jpg" style="height:500px; width:100%;">
   <div class="text">Avishkar</div>
 </div>
  <div class="mySlides fade">
   <div class="numbertext">6 / 6</div>
-  <img src="culrav img.jpg" style="width:100%;">
+  <img src="culrav img.jpg" style="height:500px; width:100%;">
   <div class="text">Culrav</div>
 </div>
 
