--- a/Main Page.html
+++ b/Main Page.html
@@ -49,8 +49,6 @@ body {
   .sidenav a {font-size: 18px;}
 }
 
-
-
 /* Style the header */
 .header {
     /* border-radius: 15 px 15 px 15 px 15 px */
@@ -161,7 +159,113 @@ img {vertical-align: middle;}
 @media only screen and (max-width: 300px) {
   .text {font-size: 11px}
 }
+input[type=text], input[type=password] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
 
+/* Set a style for all buttons */
+button {
+  background-color: #333;
+  color: #c3bb47;
+  padding: 20px 27px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 150%;
+}
+
+button:hover {
+  background-color: #ddd;
+  color: rgb(11, 77, 243);
+  opacity: 0.8;
+}
+
+/* Extra styles for the cancel button */
+.cancelbtn {
+  width: auto;
+  padding: 10px 18px;
+  background-color: #f44336;
+}
+
+.container {
+  padding: 16px;
+}
+
+span.psw {
+  float: right;
+  padding-top: 16px;
+}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  padding-top: 60px;
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button (x) */
+.close {
+  position: absolute;
+  right: 25px;
+  top: 0;
+  color: #000;
+  font-size: 35px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: red;
+  cursor: pointer;
+}
+
+/* Add Zoom Animation */
+.animate {
+  -webkit-animation: animatezoom 0.6s;
+  animation: animatezoom 0.6s
+}
+
+@-webkit-keyframes animatezoom {
+  from {-webkit-transform: scale(0)} 
+  to {-webkit-transform: scale(1)}
+}
+  
+@keyframes animatezoom {
+  from {transform: scale(0)} 
+  to {transform: scale(1)}
+}
+
+/* Change styles for span and cancel button on extra small screens */
+@media screen and (max-width: 300px) {
+  span.psw {
+     display: block;
+     float: none;
+  }
+  .cancelbtn {
+     width: 100%;
+  }
+}
 </style>
 </head>
 <body>
@@ -177,13 +281,53 @@ img {vertical-align: middle;}
   <a href="http://www.mnnit.ac.in/index.php/institute/photo-gallery">Gallery</a>
   <a href="Dashboard.html">Dashboard</a>
   
-  <div class = "topnavright">  
-    <a href="login.html"><strong>Login</strong></a>
+  <div class = "topnavright"> 
+    <div class = "topnavright">
+      <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</button>
+  
+  <div id="id01" class="modal">
+    
+    <form class="modal-content animate" method="post">
+      <div class="imgcontainer">
+        <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
+      </div>
+  
+      <div class="container">
+        <label for="uname"><b>Email Id</b></label>
+        <input type="text" placeholder="Enter Email Id" name="uname" required="true">
+  
+        <label for="psw"><b>Password</b></label>
+        <input type="password" placeholder="Enter Password" name="psw" required>
+        <a href="web.html">
+        <button type="button">Login</button></a>
+        <label>
+          <input type="checkbox" checked="checked" name="remember"> Remember me
+        </label>
+      </div>
+  
+      <div class="container" style="background-color:#f1f1f1">
+        <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
+        <span class="psw">Forgot <a href="#">password?</a></span>
+      </div>
+    </form>
+  </div>
+  
+  <script>
+  // Get the modal
+  var modal = document.getElementById('id01');
+  
+  // When the user clicks anywhere outside of the modal, close it
+  window.onclick = function(event) {
+      if (event.target == modal) {
+          modal.style.display = "none";
+      }
+  }
+  </script>   
     <a href="#"><strong>About</strong></a>
   </div>
 
 </div class="h2">
-  <marquee behavior="scroll" direction="up" scrollamount="12"><h2 style="color:crimson;">Glimpses of MNNIT</h2></marquee>
+  <marquee behavior="scroll" direction="up" scrollamount="12"><h2 style="text-align: center; color:crimson;">Glimpses of MNNIT</h2></marquee>
 
 <div class="slideshow-container">
 
