--- a/Main Page.html
+++ b/Main Page.html
@@ -76,15 +76,6 @@ body {
   padding: 20px 70px;
   text-decoration: none;
 }
-.topnavright a {
-  float:right;
-  display: initial;
-  color: #c3bb47;
-  text-align: center;
-  padding: 20px 70px;
-  text-decoration: none;
-}
-
 
 /* Change color on hover */
 .topnavleft a:hover {
@@ -282,7 +273,6 @@ span.psw {
   <a href="Dashboard.html">Dashboard</a>
   
   <div class = "topnavright"> 
-    <div class = "topnavright">
       <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</button>
   
   <div id="id01" class="modal">
@@ -323,7 +313,7 @@ span.psw {
       }
   }
   </script>   
-    <a href="#"><strong>About</strong></a>
+    <a href="#">About</a>
   </div>
 
 </div class="h2">
@@ -399,13 +389,6 @@ span.psw {
     setTimeout(showSlides, 2000); // Change image every 2 seconds
   }
   </script>
-<!-- <div class="sidenav">
-  <a href="#Class Attendance">Class Attendance</a>
-  <a href="#Time Table">Time Table</a>
-  <a href="#Recommended Books">Recommended Books</a>
-  <a href="#Faculty Info">Faculty Info</a>
-  <a href="#Fee Status">Fee Status</a>
-</div> -->
 
 </body>
 <head>
