--- a/club.html
+++ b/club.html
@@ -9,8 +9,8 @@
   <a href="https://m.facebook.com/groups/1608164252797696?group_view_referrer=search"><img src="cclogo.png" alt="cclogo logo" style="width:325px;height:325px;"></a>
   <a href="https://m.facebook.com/avishkar.robotics/" ><img src="Robologo.jpg" alt="Robologo logo"style="width:325px;height:325px;"></a>
   <a href="https://www.facebook.com/energyclubmnnit/" ><img src="energyclub.jpg" alt="energy logo" style="width:325px;height:325px;"></a>
-  <a href="https://m.facebook.com/profile.php?id=368851656466220&ref=content_filter" ><img src="literarylogo.jfif" alt="literary logo"style="width:325px;height:325px;"></a>
-  <a href="https://m.facebook.com/MNNITGreenClub/" ><img src="greenlogo.jfif" alt="green logo" style="width:325px;height:325px;"></a>
+  <a href="https://m.facebook.com/profile.php?id=368851656466220&ref=content_filter" ><img src="literarylogo.jpg" alt="literary logo"style="width:325px;height:325px;"></a>
+  <a href="https://m.facebook.com/MNNITGreenClub/" ><img src="greenlogo.jpg" alt="green logo" style="width:325px;height:325px;"></a>
   <a href="https://m.facebook.com/AeroClubMNNIT/" ><img src="aerologo.jpg" alt="aerologo" style="width:325px;height:325px;"></a>
   <a href="https://m.facebook.com/saeclubmnnit/" ><img src="SAE.jfif" alt="SAE logo" style="width:325px;height:325px;"></a>
   <a href="https://m.facebook.com/MHM.MNNIT/" ><img src="media.jpg" alt="media logo" style="width:325px;height:325px;"></a>
