--- a/club.html
+++ b/club.html
@@ -12,10 +12,10 @@
   <a href="https://m.facebook.com/profile.php?id=368851656466220&ref=content_filter" ><img src="literarylogo.jpg" alt="literary logo"style="width:325px;height:325px;"></a>
   <a href="https://m.facebook.com/MNNITGreenClub/" ><img src="greenlogo.jpg" alt="green logo" style="width:325px;height:325px;"></a>
   <a href="https://m.facebook.com/AeroClubMNNIT/" ><img src="aerologo.jpg" alt="aerologo" style="width:325px;height:325px;"></a>
-  <a href="https://m.facebook.com/saeclubmnnit/" ><img src="SAE.jfif" alt="SAE logo" style="width:325px;height:325px;"></a>
+  <a href="https://m.facebook.com/saeclubmnnit/" ><img src="SAE.jpg" alt="SAE logo" style="width:325px;height:325px;"></a>
   <a href="https://m.facebook.com/MHM.MNNIT/" ><img src="media.jpg" alt="media logo" style="width:325px;height:325px;"></a>
   <a href="https://m.facebook.com/profile.php?id=103646578138131&ref=content_filter" ><img src="Astrologo.jpg" alt="Astro logo" style="width:325px;height:325px;"></a>
-  <a href="https://m.facebook.com/rotaractmnnit/?tsid=0.2798224833719334&source=result" ><img src="rotaractlogo.jfif" alt="rotaract logo" style="width:325px;height:325px;"></a>
+  <a href="https://m.facebook.com/rotaractmnnit/?tsid=0.2798224833719334&source=result" ><img src="rotaractlogo.jpg" alt="rotaract logo" style="width:325px;height:325px;"></a>
   <a href="https://m.facebook.com/gnosismnnit/?tsid=0.8458084886400001&source=result" ><img src="gnosis.jpg" alt="gnosis logo" style="width:325px;height:325px;"></a>
   <a href="https://m.facebook.com/innovationclubmnnit/" ><img src="innovation.png" alt="innovation logo" style="width:325px;height:325px;"></a>
 </body>
